tests/paczka1/small_fuzzy/10870969.err
Error in line 14: Ru25S S777 64,6
Error in line 2: MF06DP S642 37,1
